k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mizuki
  labels:
    monitoring-gateway-access: "true"
