k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mizuki
  namespace: mizuki
spec:
  selector:
    app: mizuki
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
