k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mizuki
  namespace: mizuki
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: waf-system-waf-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: blog.hyperbola.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mizuki
            port:
              name: http
  - host: www.blog.hyperbola.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mizuki
            port:
              name: http
  - host: www.hyperbola.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mizuki
            port:
              name: http
  - host: hyperbola.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mizuki
            port:
              name: http
